Update and refactor of endpoint test suite